# skill-kits

./: .gitignore  CONTEXT.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  RELEASE.md  RELEASE_NOTES-v0.1.0.md
docs/superpowers/specs/: 2026-06-03-workbench-grid-polish-design.md
skill-kits-prd/: CONTEXT.md  GUI-SPEC.md  IMPLEMENTATION-DESIGN.md  PRD-v0.1.md
skill-kits-prd/adr/: 0001-project-native-skill-deployment.md  0002-copy-project-skill-deployments.md  0003-no-global-agent-sync-in-v0-1.md  0004-file-first-toml-registry.md
src/: app.rs  lib.rs  main.rs
src/cli/: args.rs  handlers.rs  output.rs
src/core/: adopt.rs  agent_space.rs  agents.rs  config.rs  doctor.rs  error.rs  fs.rs  hash.rs  ids.rs  install.rs  lock.rs  mod.rs  onboarding.rs  paths.rs  plugins.rs  project.rs  registry.rs  scan.rs  skills.rs  status.rs
src/gui/: agents.rs  dashboard.rs  icons.rs  mod.rs  plugins.rs  projects.rs  skills.rs  state.rs
tests/: adopt_uninstall.rs  agent_space_scan.rs  agent_space_toggle.rs  cli_shell.rs  codex_plugin_management.rs  doctor_status.rs  gui_skeleton.rs  project_deployment.rs  project_onboarding.rs  skeleton_contract.rs  skill_inventory.rs  state_foundation.rs
tests/fixtures/release-smoke/: config.toml
tests/fixtures/release-smoke/project/.agents/skills/project-seed/: SKILL.md
tests/fixtures/release-smoke/source-skill/: SKILL.md
