[package]
name = "skill-kits"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "skill_kits"
path = "src/lib.rs"

[[bin]]
name = "skill-kits"
path = "src/main.rs"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
dirs = "5"
eframe = "0.29"
egui = "0.29"
fs_extra = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
